tests/ui/pinned_drop/self.stderr
error: `self` parameter is only allowed in associated functions
  --> $DIR/self.rs:17:26
   |
17 |                     fn f(self: ()) {
   |                          ^^^^ not semantically valid as function parameter
...
23 |             t!();
   |             ----- in this macro invocation
   |
   = note: associated functions are those in `impl` or `trait` definitions
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0434]: can't capture dynamic environment in a fn item
  --> $DIR/self.rs:15:29
   |
15 |                     let _ = self; //~ ERROR can't capture dynamic environment in a fn item
   |                             ^^^^
...
23 |             t!();
   |             ----- in this macro invocation
   |
   = help: use the `|| { ... }` closure form instead
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
